--- a/backend/package.json
+++ b/backend/package.json
@@ -4,17 +4,18 @@
   "description": "movie app API",
   "type": "commonjs",
   "devDependencies": {
-    "@types/node": "^22.13.10",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
-  },
-  "dependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/memory-cache": "^0.2.6",
-    "bcrypt": "^5.1.1",
+    "@types/node": "^22.13.10",
     "concurrently": "^9.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "@types/cors": "^2.8.15",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -24,7 +25,12 @@
     "typeorm": "0.3.22"
   },
   "scripts": {
+    "watch": "tsc -w",
+    "dev": "nodemon build/index.js",
+    "start:dev": "concurrently \"tsc -w\" \"nodemon build/index.js\"",
+    "build": "tsc",
     "start": "ts-node src/index.ts",
-    "typeorm": "typeorm-ts-node-commonjs"
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration": " npm run typeorm migration:run -- -d ./src/data-source.ts"
   }
 }
