--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,14 @@
-FROM node:14
+FROM node:16
 
-WORKDIR /usr/src/app
+WORKDIR /app
 
 COPY package*.json ./
 
 RUN npm install
 
 COPY . .
+
+RUN npm run build
 
 EXPOSE 3000
 
