--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 
 services:
 
-  app:
+  backend:
 
     build: ./backend
 
@@ -17,9 +17,9 @@ services:
 
     depends_on:
 
-      - db
+      - postgres_db
 
-  db:
+  postgres_db:
 
     image: postgres
 
