--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,19 @@
 version: '3.8'
 
 services:
+  frontend:
+   
+    image: frontend
+
+    build: ./frontend
+      
+    environment:
+      
+      NODE_ENV: production
+    
+    ports:
+    
+      - 3000:3000
 
   backend:
 
@@ -9,7 +22,7 @@ services:
 
     ports:
 
-      - "3000:3000"
+      - 8080:8080
 
     volumes:
 
