--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,9 +22,12 @@
   "dependencies": {
     "@mantine/core": "7.17.7",
     "@mantine/hooks": "7.17.7",
+    "axios": "^1.9.0",
+    "cookie": "^1.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.4.0"
+    "react-router-dom": "^7.4.0",
+    "use-reducer-async": "^2.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
