--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@mantine/core": "7.17.7",
+    "@mantine/form": "^8.0.0",
     "@mantine/hooks": "7.17.7",
     "axios": "^1.9.0",
     "cookie": "^1.0.2",
