--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "use-reducer-async": "^2.1.1"
   },
