--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "memory-cache": "^0.2.0",
+    "nodemailer": "^7.0.3",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "0.3.22"
